--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "homepage": "https://github.com/nic-peterson/todo#readme",
   "devDependencies": {
     "css-loader": "^6.6.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
